Testing on mobile revealed that the notification really does have to be fixed to the viewport. Absolute positioning works horizontally but not vertically. [Amends #5]

--- a/_scss/component/notification.scss
+++ b/_scss/component/notification.scss
@@ -38,7 +38,7 @@ $body-padding: $size-default;
 }
 
 .usajobs-notification {
-  position: absolute;
+  position: fixed;
   bottom: 20%;
   z-index: 400;
   padding: 0;
